--- a/aboutus.html
+++ b/aboutus.html
@@ -14,6 +14,9 @@
         body {
             font-family: 'Lato', sans-serif;
         }
+        .green {
+            color: #22c55e;
+        }
 
         .slide-in {
             opacity: 0;
@@ -73,7 +76,7 @@
             </li>
             <li class="mt-2 pb-3">
                 <a href="/aboutus.html"
-                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block">
+                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block green">
                     A B O U T
                 </a>
             </li>
