--- a/contactus.html
+++ b/contactus.html
@@ -18,6 +18,10 @@
         #image-container {
             perspective: 1000px;
         }
+
+        .green {
+            color: #22c55e;
+        }
     </style>
 </head>
 
@@ -84,7 +88,7 @@
             </li>
             <li class="mt-2 pb-3">
                 <a href="/contactus.html"
-                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block">
+                    class="text-black-700 font-bold text-2xl transition-transform green duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block">
                     C O N T A C T
                 </a>
             </li>
