--- a/team.html
+++ b/team.html
@@ -14,6 +14,9 @@
         body {
             font-family: 'Lato', sans-serif;
         }
+        .green {
+			color: #22c55e;
+		}
     </style>
 </head>
 
@@ -75,7 +78,7 @@
             </li>
             <li class="mt-2 pb-3">
                 <a href="/team.html"
-                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block">
+                    class="text-black-700 green font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block">
                     T E A M
                 </a>
             </li>
