--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             src: url("/Fonts/SFUIText-Regular.woff") format("woff");
         }
 
+        .green {
+            color: #22c55e;
+        }
+
         .font-sf {
             font-family: "SF UI Text", sans-serif;
         }
@@ -102,8 +106,9 @@
                 justify-content: flex-start;
                 margin-top: 0;
             }
+
             .blue-quote {
-                left: 12%  !important;
+                left: 12% !important;
             }
         }
 
@@ -121,9 +126,10 @@
                 width: 100%;
                 z-index: 10;
             }
+
             .blue-quote {
-            left: 5% !important;
-    }
+                left: 5% !important;
+            }
         }
 
         /* Dot styles */
@@ -180,7 +186,7 @@
         <ul class="text-center leading-[2.5rem]">
             <li class="mt-2 pb-3">
                 <a href="/index.html"
-                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block">
+                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block green">
                     H O M E
                 </a>
             </li>
@@ -457,7 +463,7 @@
                             class="container mx-auto px-4 h-full flex flex-col md:flex-row items-center justify-between relative">
                             <!-- Top quote icon -->
                             <img src="/MIW_Website_Assets/doubleqoute_High_Blue_testimonials.png"
-                                class="absolute top-12 left-15 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block blue-quote" 
+                                class="absolute top-12 left-15 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block blue-quote"
                                 alt="Quote Top">
                             <!-- Left text -->
                             <div
