--- a/work.html
+++ b/work.html
@@ -15,6 +15,10 @@
             font-family: 'Lato', sans-serif;
         }
 
+        .green {
+            color: #22c55e;
+        }
+
         .parallax {
             transition: transform 0.3s ease-out;
         }
@@ -82,7 +86,7 @@
             </li>
             <li class="mt-2 pb-3">
                 <a href="/work.html"
-                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block">
+                    class="text-black-700 font-bold text-2xl transition-transform duration-500 ease-out scale-125 hover:scale-125 hover:font-bold block green">
                     W O R K
                 </a>
             </li>
