--- a/service.html
+++ b/service.html
@@ -20,9 +20,6 @@
 			color: blue;
 			padding: 35px 10px 24px 10px;
 		}
-
-
-
 		/* Optional: Adding a slight tilt effect */
 		.grid img:hover {
 			/* transform: scale(1) rotateX(8deg) rotateY(8deg); */
@@ -45,7 +42,7 @@
 
 		.posters img {
 			width: 110%;
-			height: 120%;
+			/* height: 120%; */
 			object-fit: cover;
 			transform-origin: center;
 			top: 0;
@@ -156,8 +153,8 @@
 		<div
 			class="col-span-4 row-span-2 bg-green-500 px-4 md:px-6 lg:px-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2">BRANDING</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose">
+				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">BRANDING</h1>
+				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
 					LOGO DESIGN, BRAND POSITIONING, BRAND STRATEGY, NAMING & TAGLINE DEVELOPMENT, REBRANDING
 				</p>
 				<button class="mt-4">
@@ -180,8 +177,8 @@
 		<div id="ads-section-right"
 			class="col-span-4 row-span-2 col-start-4 row-start-3 bg-white p-4 md:p-6 lg:p-8 text-blue-700 flex items-center justify-center">
 			<div class="text-right custom-width">
-				<h1 class="text-right text-3xl md:text-4xl font-bold leading-relaxed pb-2">ADVERTISING</h1>
-				<p class="text-right text-xs sm:text-sm md:text-base leading-loose">
+				<h1 class="text-right text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">ADVERTISING</h1>
+				<p class="text-right text-xs sm:text-sm md:text-base leading-loose animate-text">
 					PRINT, DIGITAL, FILM, PHOTOGRAPHY AND ART DIRECTION, OUT-OF-HOME ADVERTISING.
 				</p>
 				<button class="mt-4">
@@ -194,8 +191,8 @@
 		<div
 			class="col-span-4 row-span-2 row-start-5 bg-pink-500 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2">DESIGNING</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose">
+				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">DESIGNING</h1>
+				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
 					GRAPHIC DESIGN, PACKAGING DESIGN, WEBSITE DESIGN & DEVELOPMENT, UI/UX DESIGN, PROTOTYPING AND
 					WIREFRAMING,
 					MOTION GRAPHICS & ANIMATION
@@ -220,8 +217,8 @@
 		<div
 			class="col-span-4 row-span-2 col-start-4 row-start-7 bg-black p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-right custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold pb-2">FILM PRODUCTION</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose">
+				<h1 class="text-3xl md:text-4xl font-bold pb-2 animate-text">FILM PRODUCTION</h1>
+				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
 					TITLE ANIMATION, STOP MOTION ANIMATION, MOVIE TITLE SEQUENCE, 2D ANIMATION & 3D ANIMATION
 				</p>
 				<button class="mt-4">
@@ -234,8 +231,8 @@
 		<div
 			class="col-span-4 row-span-2 row-start-9 bg-blue-700 p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-left custom-width">
-				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2">UI / UX</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose">
+				<h1 class="text-3xl md:text-4xl font-bold leading-relaxed pb-2 animate-text">UI / UX</h1>
+				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
 					SOCIAL MEDIA STRATEGY AND MANAGEMENT, CONTENT CREATION - COPY, GRAPHICS AND VIDEO, INFLUENCER
 					MARKETING
 				</p>
@@ -259,8 +256,8 @@
 		<div
 			class="col-span-4 row-span-2 col-start-4 row-start-11 bg-[#ffd527] p-4 md:p-6 lg:p-8 text-white flex items-center justify-center">
 			<div class="text-right custom-width text-blue-700">
-				<h1 class="text-3xl md:text-4xl font-bold pb-2">INTEGRATED MARKETING</h1>
-				<p class="text-xs sm:text-sm md:text-base leading-loose">
+				<h1 class="text-3xl md:text-4xl font-bold pb-2 animate-text">INTEGRATED MARKETING</h1>
+				<p class="text-xs sm:text-sm md:text-base leading-loose animate-text">
 					360 MARKETING CAMPAIGNS, GUERRILLA MARKETING AND EXPERIENTIAL MARKETING, SPONSORSHIP AND
 					PARTNERSHIPS
 				</p>
@@ -442,7 +439,7 @@
 				smooth: true,
 				smoothMobile: true,
 				inertia: 0.85,
-				multiplier: 1.2,
+				multiplier: 2,
 				getDirection: true
 			});
 			locoScrollInstance = locoScroll;
@@ -483,8 +480,9 @@
 
 				lastScrollY = currentScrollY;
 
-				ScrollTrigger.update();
+				ScrollTrigger.update(); 
 			});
+
 			// locoScroll.on("scroll", ScrollTrigger.update);
 			ScrollTrigger.addEventListener("refresh", () => locoScroll.update());
 			ScrollTrigger.refresh();
