work page working

--- a/work.html
+++ b/work.html
@@ -408,8 +408,8 @@
 
                 el.addEventListener("mouseenter", expand);
                 el.addEventListener("mouseleave", shrink);
-                el.addEventListener("touchstart", expand);  // Works on mobile
-                el.addEventListener("touchend", shrink);    // Works on mobile
+                // el.addEventListener("touchstart", expand);  // Works on mobile
+                // el.addEventListener("touchend", shrink);    // Works on mobile
             });
 
             gsap.utils.toArray(".bounce-button").forEach((el) => {
